--- a/gb/21/11/13/n13373677.md
+++ b/gb/21/11/13/n13373677.md
@@ -1,20 +1,20 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/wjcmfz366/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/wjcmfz366/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/wjcmfz366/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/wjcmfz366/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/wjcmfz366/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wjcmfz366/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/wjcmfz366/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/wjcmfz366/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/wjcmfz366/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/wjcmfz366/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/wjcmfz366/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/wjcmfz366/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/wjcmfz366/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/wjcmfz366/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/wjcmfz366/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/wjcmfz366/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/wjcmfz366/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/wjcmfz366/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/wjcmfz366/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/wjcmfz366/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/wjcmfz366/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/wjcmfz366/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/wjcmfz366/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/wjcmfz366/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/wjcmfz366/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/wjcmfz366/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/wjcmfz366/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/wjcmfz366/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/wjcmfz366/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/wjcmfz366/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/wjcmfz366/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/wjcmfz366/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/wjcmfz366/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/wjcmfz366/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/wjcmfz366/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/wjcmfz366/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/wjcmfz366/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/wjcmfz366/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/wjcmfz366/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/wjcmfz366/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/wjcmfz366/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/wjcmfz366/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/wjcmfz366/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/wjcmfz366/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/wjcmfz366/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/wjcmfz366/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/wjcmfz366/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【马克时空】美公布2021中共军力报告 台湾面临哪些威胁？</h2>
-<a href="https://d2rhftayg1puwj.cloudfront.net/W5kujQJqz"><img width="600" src="https://raw.githubusercontent.com/wjcmfz366/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/wjcmfz366/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<a href="https://d337p4rc38c0de.cloudfront.net/N0aujQJqw"><img width="600" src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6>美公布2021中共军力报告 台湾面临哪些威胁？（【马克时空】节目组）
 </h6>
 <hr>
-	<p>【大纪元2021年11月13日讯】最近，美国国会参众议员“低调”访问台湾，引发中共的抗议，并派出6架军机骚扰台湾防空识别区。随着美国、日本和欧洲与台湾的关系快速升温，美台军事交流公开化，不断踢破中共所谓的红线。美国国防部11月3日公布2021版的《中共军力报告》，这份总计173页的报告，详细阐述中共的军事能力进展和战略目标，并罕见地以中共“在台湾海峡的战略和能力发展”为题，专门讨论台海安全问题，还有“解放军目前对台湾冲突的准备”，明显暗示中共<ahref="https://github.com/wjcmfz366/djy/blob/master/gb/tag/%E6%AD%A6%E5%8A%9B%E7%8A%AF%E5%8F%B0.md#1">武力犯台</a>的可能性大增。</p>
-<p><a width="560" b="315" src=""></a><a href="https://d2rhftayg1puwj.cloudfront.net/W5kujQJqz"><img width="600" src="https://raw.githubusercontent.com/wjcmfz366/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/wjcmfz366/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/8JpUt5ZBxTQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></a></p>
+	<p>【大纪元2021年11月13日讯】最近，美国国会参众议员“低调”访问台湾，引发中共的抗议，并派出6架军机骚扰台湾防空识别区。随着美国、日本和欧洲与台湾的关系快速升温，美台军事交流公开化，不断踢破中共所谓的红线。美国国防部11月3日公布2021版的《中共军力报告》，这份总计173页的报告，详细阐述中共的军事能力进展和战略目标，并罕见地以中共“在台湾海峡的战略和能力发展”为题，专门讨论台海安全问题，还有“解放军目前对台湾冲突的准备”，明显暗示中共<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%AD%A6%E5%8A%9B%E7%8A%AF%E5%8F%B0.md#1">武力犯台</a>的可能性大增。</p>
+<p><a width="560" b="315" src=""></a><a href="https://d337p4rc38c0de.cloudfront.net/N0aujQJqw"><img width="600" src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/8JpUt5ZBxTQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></a></p>
 <p>视频内容还有：</p>
 <h2>? 中共无法快速全面占领台湾</h2>
 <h2>? 中共对台动武的不同选项</h2>
 <h2>? 台湾的防御能力</h2>
 <h2>? 导弹防御不能只靠防空导弹</h2>
 <p>更多精彩内容请看YouTube视频：<span style="color: #0000ff;"><a style="color: #0000ff;" href="https://youtu.be/8JpUt5ZBxTQ">https://youtu.be/8JpUt5ZBxTQ</a></span></p>
-<p>【马克时空】YouTube频道：<ahref=""></a><a href="https://d2rhftayg1puwj.cloudfront.net/W5kujQJqz"><img width="600" src="https://raw.githubusercontent.com/wjcmfz366/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/wjcmfz366/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/channel/UCejNr6vMTCstFMb-UisJRaw"><span style="color: #0000ff;">"></a><a href="https://d2rhftayg1puwj.cloudfront.net/W5kujQJqz"><img width="600" src="https://raw.githubusercontent.com/wjcmfz366/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/wjcmfz366/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/channel/马克时空</span></a></p>
+<p>【马克时空】YouTube频道：<ahref=""></a><a href="https://d337p4rc38c0de.cloudfront.net/N0aujQJqw"><img width="600" src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/channel/UCejNr6vMTCstFMb-UisJRaw"><span style="color: #0000ff;">"></a><a href="https://d337p4rc38c0de.cloudfront.net/N0aujQJqw"><img width="600" src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/channel/马克时空</span></a></p>
 <p>【马克时空】Odysee频道：<span style="color: #0000ff;"><a style="color: #0000ff;" href="https://odysee.com/@%E9%A6%AC%E5%85%8B%E6%99%82%E7%A9%BAMarkSpace:8?r=3nKWPJzBMimTfzYt9yd24LREKkLPsqZc">https://odysee.com/@马克时空MarkSpace</a></span></p>
 <p>【马克时空】Facebook粉丝专页：<span style="color: #0000ff;"><a style="color: #0000ff;" href="https://www.facebook.com/马克时空-Mark-Space-104329048322968">https://www.facebook.com/马克时空-Mark-Space</a></span></p>
 <p>【马克时空】Telegram群组：<ahref="https://t.me/markspacechannel"><span style="color: #0000ff;">https://t.me/markspacechannel</span></a></p>
@@ -25,35 +25,41 @@
 <hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/wjcmfz366/djy/blob/master/gb/21/9/16/n13239148.md#1">【马克时空】中共军事威胁扩大 台湾将购入哪些新武器？</a></li>
-<li><a href="https://github.com/wjcmfz366/djy/blob/master/gb/21/10/3/n13277467.md#1">【马克时空】日助台潜建国造 苍龙级锂电潜艇有何优势</a></li>
-<li><a href="https://github.com/wjcmfz366/djy/blob/master/gb/21/10/8/n13289695.md#1">【马克时空】共机扰台创新高 日本出云号将协防台湾？</a></li>
-<li><a href="https://github.com/wjcmfz366/djy/blob/master/gb/21/10/23/n13324510.md#1">【马克时空】中共军机大举扰台 反曝发动机短命</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/9/16/n13239148.md#1">【马克时空】中共军事威胁扩大 台湾将购入哪些新武器？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/3/n13277467.md#1">【马克时空】日助台潜建国造 苍龙级锂电潜艇有何优势</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/8/n13289695.md#1">【马克时空】共机扰台创新高 日本出云号将协防台湾？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/23/n13324510.md#1">【马克时空】中共军机大举扰台 反曝发动机短命</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/11/n11446216.md#1" target="_blank">夏祷：2019火种：天象巨变（2）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/14/10/23/n4278970.md#1" target="_blank">唐风：加拿大警官看完《转法轮》之后</a></li><hr>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/4/n11300386.md#1" target="_blank">林辉：大饥荒 中共却无偿送几内亚万吨大米</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/15/n11385671.md#1" target="_blank">嫁到韩国的中国媳妇：守住善就能走出困境</a></li><hr>
 
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/20/3/21/n11960123.md#1">【拍案惊奇】川普指中共延误 武汉二次爆发预警</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/20/3/21/n11961699.md#1">追责中共隐瞒疫情 国际专家提六大方案</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/20/3/21/n11960837.md#1">中共声称疫情“零增长” 民众揭背后真相</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/20/3/20/n11959369.md#1">组图：疫情缓解？天安门军队大院防备森严</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/20/3/21/n11962082.md#1">【最新疫情3.22】川普启动三州国民警卫队</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/20/3/20/n11959416.md#1">众星遭陆“限籍令”点名 台湾艺人揭中共套路</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/20/3/19/n11955678.md#1">钟南山再甩锅 黄秋生怒呛中共专家玩弄言词</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/20/3/21/n11962008.md#1">好莱坞制作人瓦特染疫：身体像被巴士撞到</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/20/3/20/n11958206.md#1">TWICE周子瑜首本个人照片书 4月27日发行</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/20/3/20/n11959037.md#1">甄子丹携妻小自美返港 戴电子手环强制隔离</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/20/3/2/n11909598.md#1">【命理】长寿的命怎样看？</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/20/3/11/n11933384.md#1">断臂僧转世？小蛮童有胆 向康熙帝要官职</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/20/3/13/n11938981.md#1">“千金报德”英雄本色</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/20/3/17/n11945807.md#1">2020 否极泰来</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/20/3/10/n11929076.md#1">天地清明引(234) 降天罪－琼林鏖战4</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/31/n13342805.md#1">刷牙就能让白发变黑  这些中医处方为何历久不衰？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/29/n13339418.md#1">世界十大奇险建筑“悬空寺”的千古之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/29/n13339482.md#1">【未解之谜】寻找转世灵童</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/1/n13346265.md#1">【百年真相】从高官到囚徒 崔月犂如何走出秦城</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/30/n13341559.md#1">【舞蹈三剑客】神韵全球巡演期间 难忘的美食回忆</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/5/n13355885.md#1">【新闻大家谈】五角大楼揭中共“最高机密”？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/5/n13356732.md#1">【秦鹏直播】马云及海底捞遇麻烦 因惹赵家人？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/5/n13356729.md#1">【古韵流芳】不计荣辱悲欢 心如砥柱刘禹锡</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/4/n13352549.md#1">【中国观察】张高丽性丑闻的结局将如何</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/3/n13351361.md#1">剧中小动作引共鸣 刘涛回应是否在工地干过活</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/4/n13352001.md#1">【一线采访】多地现抢购潮 爆发打斗场面</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/3/n13351361.md#1">剧中小动作引共鸣 刘涛回应是否在工地干过活</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/4/n13354084.md#1">顶新发型看秀气场强大 范冰冰获时尚网红大赞</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/3/n13351814.md#1">周润发与路人合照罕见露愠色 原因曝光</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/3/n13349727.md#1">谢丽金受荨麻疹之苦 为健康登山差点送命</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/4/n13354413.md#1">林青霞庆67岁生日 手上鸽子蛋巨钻抢镜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/31/n13342805.md#1">刷牙就能让白发变黑  这些中医处方为何历久不衰？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/1/n13344694.md#1">10类护眼食物大公开 吃对三餐远离眼病</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/4/n13351980.md#1">大豆原来这么好 10种豆制品 哪些营养胜一筹</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/3/n13349792.md#1">大陆小说作家自曝账号被盗 骇客竟帮忙写稿</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/3/n13350110.md#1">小白球被鳄鱼咬走 挥杆的美国男子笑歪了</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/wjcmfz366/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/wjcmfz366/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/11/13/n13373677.htm">【马克时空】美公布2021中共军力报告 台湾面临哪些威胁？</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/11/13/n13373677.htm">【马克时空】美公布2021中共军力报告 台湾面临哪些威胁？</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/wjcmfz366/djy/blob/master/gb/21/11/13/n13373677.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/wjcmfz366/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wjcmfz366/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/wjcmfz366/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/wjcmfz366/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/wjcmfz366/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wjcmfz366/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/wjcmfz366/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wjcmfz366/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/wjcmfz366/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wjcmfz366/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/wjcmfz366/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wjcmfz366/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/wjcmfz366/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wjcmfz366/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/wjcmfz366/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wjcmfz366/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/wjcmfz366/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wjcmfz366/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/wjcmfz366/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wjcmfz366/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/wjcmfz366/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wjcmfz366/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/wjcmfz366/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wjcmfz366/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/wjcmfz366/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wjcmfz366/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/wjcmfz366/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wjcmfz366/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/wjcmfz366/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wjcmfz366/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/wjcmfz366/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wjcmfz366/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/wjcmfz366/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wjcmfz366/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/wjcmfz366/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wjcmfz366/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/wjcmfz366/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wjcmfz366/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/wjcmfz366/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wjcmfz366/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/wjcmfz366/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wjcmfz366/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/wjcmfz366/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wjcmfz366/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/wjcmfz366/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wjcmfz366/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/wjcmfz366/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wjcmfz366/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/21/11/13/n13373677.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
